feat: Introduce Teacher Dashboard with student selection UI and backend routes for behaviors.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,3 +13,9 @@ SECRET_KEY=your-secret-key-change-in-production
 
 # Set to "testing" when running pytest (disables scheduler)
 # FLASK_ENV=testing
+
+# CORS allowed origins (comma-separated, no spaces)
+# Development:
+CORS_ORIGINS=http://localhost:5173,http://127.0.0.1:5173
+# Production example:
+# CORS_ORIGINS=https://dibby-dollars.yourschool.edu,https://www.yourschool.edu
