--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -3,6 +3,8 @@
 
 # Backend API base URL (no trailing slash)
 # Development (default if unset):
-# VITE_API_URL=http://localhost:5000/api
-# Production: set to your deployed backend URL
+VITE_API_URL=http://localhost:5000/api
+
+# Production examples:
 # VITE_API_URL=https://api.yourschool.edu/dibby-dollars/api
+# VITE_API_URL=https://dibby-backend.render.com/api
